--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="assets/favicon.png">
     <style>
-        * {
-            box-sizing: border-box;
-        }
-
         :root {
             --primary: #fc4d50;
             --success: #4ade80;
@@ -24,22 +20,15 @@
             --card-border: #334155;
         }
 
-        html,
-        body {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-        }
-
         body {
             font-family: 'Outfit', -apple-system, blinkmacsystemfont, "Segoe UI", roboto, helvetica, arial, sans-serif;
             background-color: var(--bg);
             color: var(--text-main);
+            margin: 0;
             display: flex;
             justify-content: center;
             align-items: center;
-            overflow: hidden;
+            min-height: 100vh;
         }
 
         .container {
@@ -51,7 +40,6 @@
             max-width: 440px;
             width: 90%;
             border: 1px solid var(--card-border);
-            position: relative;
         }
 
         .icon-box {
